# blancops

./: .gitignore  README.md  pyproject.toml
blancops/algorithms/: base.py  bc.py  builder.py  ddqn.py  factory.py  policies.py
blancops/configs/: constants.py  enums.py  global_config.json  live_scheduler_default.yaml  rl_schema.py  schema.py  template_train_config.json
blancops/core_rl/: agent.py  agents.py  environments.py  neural_nets.py
blancops/data/: constants.py  data_processing.py  dataset.py  feature_cache.py  lookup.py  lookup_tables.py  obs_history.py  offline_dataset.py  preprocessing.py
blancops/data_processing/: constants.py  data_processing.py  features.py  offline_dataset.py
blancops/data_quality/: seeing.py
blancops/environment/: base.py  blanco_base.py  environments.py  field_mask_schedule.py  historic_env.py  live_env.py  offline_base.py  offline_env.py  online_env.py  seeing_model.py  sim_env.py  survey_tracker.py  test_env.py  validation_env.py
blancops/ephemerides/: __init__.py  ephemerides.py  time_utils.py
blancops/features/: bin_features.py  features.py  global_features.py  transforms.py
blancops/io/: fits_io.py  logger_utils.py  schedule_io.py
blancops/live_scheduler/: README.md  __init__.py  api_client.py  client.py  database.py  interface.py  model_runner.py  orchestrator.py  progress_manager.py  scl.py  state_manager.py
blancops/math/: geometry.py  units.py
blancops/plotting/: live_scheduling_viz.py  plotting.py  schedule_viz.py  training_viz.py
blancops/rl/: README.md  agent.py  agent_factory.py  checkpointer.py  checkpointing.py  evaluations.py  offline_runner.py  registry.py  rewards.py  runner.py  trainer.py
blancops/scripts/: build_train_lookups.py  eval.py  generate_train_lookups.py  inference.py  init.py  precompute_features.py  predict.py  run_live_scheduler.py  run_offline_scheduler.py  schedule.py  simulate.py  train.py  validate.py  validate_single_night.py  verify_live_command_loop.py
blancops/survey/: des_consts.py  footprint.py  profiles.py  (+3 more)
configs/: global_config.json  template_train_config.json
deployable_models/: aliases.yml
(+111 files in other folders)
