# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blancops"
version = "0.1.0"
dependencies = ["PyYAML"]

[tool.setuptools.packages.find]
include = ["blancops*"]

[project.scripts]
init-workspace = "blancops.scripts.init:main"
construct-train-lookups = "blancops.scripts.generate_train_lookups:main"
run-train = "blancops.scripts.train:main"
run-validate = "blancops.scripts.validate:main"
run-inference = "blancops.scripts.inference:main"

[tool.setuptools.package-data]
"blancops" = ["configs/*.json", "configs/*.yaml"]
"blancops.configs" = ["*.json"]
