# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blancops"
version = "0.1.0"
dependencies = ["PyYAML"]

[tool.setuptools.packages.find]
include = ["blancops*"]

[project.scripts]
workspace-init = "blancops.scripts.init:main"
construct-train-lookups = "blancops.scripts.generate_train_lookups:main"
run-train = "blancops.scripts.train:main"
run-validate = "blancops.scripts.validate:main"
run-simulate = "blancops.scripts.predict:main"
run-live-scheduler = "blancops.scripts.run_live_scheduler:main"

[tool.setuptools.package-data]
"blancops" = ["configs/*.json", "configs/*.yaml"]
"blancops.configs" = ["*.json"]
